# serverless-demo-for-aiops

./: .gitignore  CICD.md  CLAUDE.md  README.md  TODO-ai-features.md  docker-compose.yml  pyproject.toml
.github/: AWS_OIDC_SETUP.md
.github/workflows/: deploy.yml  pr-tests.yml
.kiro/hooks/: doc-sync-check.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: aws.md  doc-sync.md  git.md
agents/langgraph/: Dockerfile  conftest.py  prompt_loader.py  prompts.json  requirements.txt  server.py  test_server.py  tracing.py  tracing_extras.py
agents/shared/: models.json
agents/strands/: .gitignore  conftest.py  (+8 more)
cdk/: .eslintrc.json  .gitignore  cdk.context.json  cdk.json  jest.config.ts  junit.xml  package-lock.json  package.json  tsconfig.json
docs/: agentic-development-lifecycle.md  architecture.md  local-testing.md  local-vs-cloud.md  product-complexity-plan.md
evaluation/: .gitignore  README.md  ci-run.sh  judge.py  omni-eval-prompt.md  report.py  requirements.txt  runner.py
local/: README.md
mcp-server/: README.md  requirements.txt  server.py
scripts/: README.md  trigger-trafgen.sh
test/: README.md  seed-cloud-ddb.sh  seed-cloud.sh  verify-cloud.sh
trafgen/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
trafgen/profiles/: baseline.yaml
trafgen/tests/: conftest.py
trafgen/trafgen/: __init__.py  cli.py  config.py  observability.py  personas.py  sampling.py  scheduler.py  targets.py  templates.py  tokenbucket.py
trafgen/trafgen/clients/: __init__.py  agent.py  rest.py  sigv4.py
ui/: README.md  shared-vite-template.md
(+163 files in other folders)
